[package]
name = "convert-js-macros"
edition = "2021"

version = "1.0.0-alpha.8" # replace version

description = "macros for convert-js"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
darling = "0.13"
proc-macro2 = "1.0.32"

[dev-dependencies]
convert-js = { path = "../convert-js" }
