[package]
name = "convert-js"
edition = "2021"

version = "1.0.0-alpha.5" # replace version

description = "Convert rust wasm from/to js"
license = "MIT"
authors = [
    "Equal Ma <equalma@outlook.com>",
]
homepage = "https://github.com/frender-rs/convert-js"
repository = "https://github.com/frender-rs/convert-js"
categories = [
    "wasm",
]
keywords = [
    "wasm",
    "convert",
    "js",
    "serde",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3"
shrinkwraprs = "0.3.0"

[dependencies.convert-js-macros]
path = "../convert-js-macros"

version = "1.0.0-alpha.5" # replace version

[dev-dependencies]
wasm-bindgen-test = "0.3"
js-test = { path = "../js-test" }
