[package]
name = "js-test"
edition = "2021"

version = "1.0.0-alpha.12" # replace version

description = "wasm bindgen js test utilities"
license = "MIT"
authors = [
    "Equal Ma <equalma@outlook.com>",
]
homepage = "https://github.com/frender-rs/convert-js"
repository = "https://github.com/frender-rs/convert-js"
categories = [
    "wasm",
    "development-tools::testing",
]
keywords = [
    "wasm",
    "bindgen",
    "js",
    "test",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.55"

[dev-dependencies]
wasm-bindgen-test = "0.3"
